gilab-stack-CD.yml
AWSTemplateFormatVersion: '2010-09-09'
Metadata:
  License: Apache-2.0
Description: 'AWS CloudFormation Sample Template EC2InstanceWithSecurityGroupSample:
  Create an Amazon EC2 instance running the Amazon Linux AMI. The AMI is chosen based
  on the region in which the stack is run. This example creates an EC2 security group
  for the instance to give you SSH access. **WARNING** This template creates an Amazon
  EC2 instance. You will be billed for the AWS resources used if you create a stack
  from this template.'
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: Docker EC2 instance type
    Type: String
    Default: t2.medium
    AllowedValues: [t2.nano, t2.micro, t2.small, t2.medium, t2.large, t2.xlarge, t2.2xlarge,
      t3.nano, t3.micro, t3.small, t3.medium, t3.large, t3.xlarge, t3.2xlarge,
      m4.large, m4.xlarge, m4.2xlarge, m4.4xlarge, m4.10xlarge,
      m5.large, m5.xlarge, m5.2xlarge, m5.4xlarge,
      c5.large, c5.xlarge, c5.2xlarge, c5.4xlarge, c5.9xlarge,
      g3.8xlarge,
      r5.large, r5.xlarge, r5.2xlarge, r5.4xlarge, r3.12xlarge,
      i3.xlarge, i3.2xlarge, i3.4xlarge, i3.8xlarge,
      d2.xlarge, d2.2xlarge, d2.4xlarge, d2.8xlarge]
    ConstraintDescription: must be a valid EC2 instance type.
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

Resources:
  GitLabInstanceCD:
    Type: AWS::EC2::Instance
    Properties:
      Tags:
       - Key: Name
         Value: 'GitLabCD-Server'
      InstanceType: !Ref 'InstanceType'
      SecurityGroups: [!Ref 'InstanceSecurityGroup']
      KeyName: !Ref 'KeyName'
      ImageId: 'ami-003f19e0e687de1cd'
      UserData:
        'Fn::Base64': !Join
          - ''
          - - !Sub |
              #!/bin/sh
              echo "deb http://ppa.launchpad.net/ansible/ansible/ubuntu trusty main" >> /etc/apt/sources.list
              apt-get update
              apt-get -y install dirmngr --install-recommends
              apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 93C4A3FD7BB9C367
              apt update
              apt -y install ansible

              # retrieve ansible code
              apt -y install git
              git clone https://github.com/diranetafen/cursus-devops.git
              cd cursus-devops/ansible
              ansible-galaxy install -r roles/requirements.yml
              ansible-playbook install_docker.yml
              usermod -aG docker admin
              #before install gitlab-ci we get the punlic dns
            - |
              GITLAB_EXTERNAL_HOSTNAME=`curl http://169.254.169.254/latest/meta-data/public-hostname`
              ansible-playbook install_gitlab_ci.yml --extra-var "gitlab_external_hostname=${GITLAB_EXTERNAL_HOSTNAME}"
              
              # Desactivate ssh timer
               sudo echo 'ClientAliveInterval 4' >> /etc/ssh/sshd_config
               sudo echo 'ClientAliveCountMax 22' >> /etc/ssh/sshd_config
               sudo systemctl restart sshd
          
              # Activate line numer editor vim
               sudo echo 'set nocompatible' > ~/.vimrc
               sudo echo 'set number' >> ~/.vimrc
    
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
       - Key: Name
         Value: 'Rules GitLabServer'
      GroupDescription: Enable SSH access via port 22 and 80
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref 'SSHLocation'
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: !Ref 'SSHLocation'
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: !Ref 'SSHLocation'
      - IpProtocol: tcp
        FromPort: 5000
        ToPort: 5000
        CidrIp: !Ref 'SSHLocation'
        
  
  CentosInstanceBuild:
    Type: AWS::EC2::Instance
    Properties:
      Tags:
       - Key: Name
         Value: 'Gitlab-Build'
      InstanceType: !Ref 'InstanceType'
      SecurityGroups: [!Ref 'InstanceSecurityGroupRemoteServer']
      KeyName: !Ref 'KeyName'
      ImageId: 'ami-0083662ba17882949'
      UserData:
        'Fn::Base64':
          !Sub |
            #!/bin/bash
          
            # Desactivate ssh timer
            sudo echo 'ClientAliveInterval 4' >> /etc/ssh/sshd_config
            sudo echo 'ClientAliveCountMax 22' >> /etc/ssh/sshd_config
            sudo systemctl restart sshd
          
            # Activate line numer editor vim
            sudo echo 'set nocompatible' > ~/.vimrc
            sudo echo 'set number' >> ~/.vimrc
  
  
  CentosInstanceProd:
    Type: AWS::EC2::Instance
    Properties:
      Tags:
       - Key: Name
         Value: 'Gitlab-Prod'
      InstanceType: !Ref 'InstanceType'
      SecurityGroups: [!Ref 'InstanceSecurityGroupRemoteServer']
      KeyName: !Ref 'KeyName'
      ImageId: 'ami-0083662ba17882949'
      UserData:
        'Fn::Base64':
          !Sub |
            #!/bin/bash

            # Desactivate ssh timer
            sudo echo 'ClientAliveInterval 4' >> /etc/ssh/sshd_config
            sudo echo 'ClientAliveCountMax 22' >> /etc/ssh/sshd_config
            sudo systemctl restart sshd
          
            # Activate line number editor vim
            sudo echo 'set nocompatible' > ~/.vimrc
            sudo echo 'set number' >> ~/.vimrc
            
  CentosInstancePreProd:
    Type: AWS::EC2::Instance
    Properties:
      Tags:
       - Key: Name
         Value: 'Gitlab-PreProd'
      InstanceType: !Ref 'InstanceType'
      SecurityGroups: [!Ref 'InstanceSecurityGroupRemoteServer']
      KeyName: !Ref 'KeyName'
      ImageId: 'ami-0083662ba17882949'
      UserData:
        'Fn::Base64':
          !Sub |
            #!/bin/bash

            # Desactivate ssh timer
            sudo echo 'ClientAliveInterval 4' >> /etc/ssh/sshd_config
            sudo echo 'ClientAliveCountMax 22' >> /etc/ssh/sshd_config
            sudo systemctl restart sshd
          
            # Activate line number editor vim
            sudo echo 'set nocompatible' > ~/.vimrc
            sudo echo 'set number' >> ~/.vimrc
  
  InstanceSecurityGroupRemoteServer:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
       - Key: Name
         Value: 'Rules Hosts'
      GroupDescription: Enable SSH access via port 22 and 80
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref 'SSHLocation'
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: !Ref 'SSHLocation'

Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref 'GitLabInstanceCD'
    Value: !Ref 'CentosInstanceBuild'
    Value: !Ref 'CentosInstanceProd'
    Value: !Ref 'CentosInstancePreProd'
  AZ:
    Description: Availability Zone of the newly created EC2 instance
    Value: !GetAtt [GitLabInstanceCD, AvailabilityZone]
    Value: !GetAtt [CentosInstanceBuild, AvailabilityZone]
    Value: !GetAtt [CentosInstanceProd, AvailabilityZone]
    Value: !GetAtt [CentosInstancePreProd, AvailabilityZone]
  PublicDNS:
    Description: Public DNSName of the newly created EC2 instance
    Value: !GetAtt [GitLabInstanceCD, PublicDnsName]
    Value: !GetAtt [CentosInstanceBuild, PublicDnsName]
    Value: !GetAtt [CentosInstanceProd, PublicDnsName]
    Value: !GetAtt [CentosInstancePreProd, PublicDnsName]
  PublicIP:
    Description: Public IP address of the newly created EC2 instance
    Value: !GetAtt [GitLabInstanceCD, PublicIp]
    Value: !GetAtt [CentosInstanceBuild, PublicIp]
    Value: !GetAtt [CentosInstanceProd, PublicIp]
    Value: !GetAtt [CentosInstancePreProd, PublicIp]
